<resources>
    <string name="app_name">BUI Handbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
      <string name="visionstatemen">A foremost Christian Institution of Excellence, Building God\-Fearing Leaders, Defining the Future.</string>
     <string name="missionstatement">Creating a conducive and dynamic teaching, learning and research environment that equips our graduates with christ\-like character, positive attitude and sterling leadership qualities.</string>
    <string name="introduction_pre">The Nigerian Baptist Convention in 2001 established BOWEN UNIVERSITY, Iwo (hereafter referred to as the University “).\n\ni. to provide courses of instruction and other facilities for the pursuit of learning in all its branches and to make those facilities available on proper terms to such persons as are equipped to benefit from them;\n\nii. to encourage and promote scholarship and conduct research in all fields of learning and human endeavor;\n\niii. to relate its activities to the social, cultural and economic needs of the people of Nigeria;\n\niv. to undertake any other service appropriate for a university of the highest standard;\n\nv. to promote and encourage academic research which will focus on those areas that will promote the development of the society at large. In pursuit of this goal, the various Departments and Institutes will be encouraged to conduct research into some of the urgent problems of contemporary society such as ecology, erosion control. Environmental degradation, drug abuse, cultism, etc. These shall be both at the Departmental level as well as through the various institutes.</string>
    <string name="historicalbackground_pre">i.Bist Mission came to Nigeria in 1850 with the determination not only to evangelize also introduce formal education to the people as a means to promote social development. Thus, by August 1854, the first Baptist missionary to Western Nigeria, the late Revd. Thomas Jefferson Bowen and his wife started a \'school\' comprising a handful of the stewards and labourers of the Bowens, and others from the community drawn by sheer curiosity. This has grown today into thousands of primary and secondary schools scattered across the country. Between 1915 and 1960, Baptist primary schools sprang up almost every where there was a Baptist congregation, while Baptist secondary schools also followed.\n\nii. As early as 1938, the Foreign Missions Board of the Southern Baptist Convention, USA had nursed the vision of establishing a Baptist University in Nigeria as a means of developing the potentials of the youths to the fullest. However, this initial idea was not formalized until it was presented to the meeting of the Baptist Mission held in Eku from the 11th to 14th December, 1956. Thus began a series of activities by a Survey Committee, which later transformed into the Baptist University Committee in 1957.\n\niii. The Baptist University project was first scheduled to start in 1961 and later rescheduled for 1964. The initial difficulty of raising sufficient funds locally delayed the take\-off until 1978 when the project was laid to rest. This became further complicated, when Chief A. Y. Eke, the then Minister of Education, called attention to the fact that there was no provision in Nigerian Constitution for a private university. Happily, with Government Policy initiative and consequent upon the promulgation of Decree No. 1 of 1993 legalizing the establishment of private universities, the Baptist University project was recieved and became actualized in 2001.\n</string>
    <string name="naming">The Nigerian Baptist Convention named the University \"Bowen University\" (of the Nigerian Baptist Convention ), Iwo, Osun State, Nigeria, after the Reverend Thomas Jefferson Bowen, who pioneered Baptist Mission work in  Nigeria in 1850.</string>
    <string name="philosophy">The University is conceived as a center of learning and research of distinction; combining academic excellence with love of humanity, borne out of God\-fearing attitude, in accordance with the Baptist tradition of ethical behaviour, social responsibility and democratic ethos.</string>
    <string name="themotto">The motto of the University is \"Excellence and Godliness \". This emphasizes the importance the University attaches to the attainment of excellence imbued with godliness in all its programmes and training. \"Excellence and Godliness\" is the principle underpinning all academic pursuits in the University.</string>
    <string name="logo">The focal point of the logo is the open book. The sun stands for light, life and energy . The palm frond symbolizes freshness and a new begining. It is the dominant foilage of the Nigerian rainforest belt, used for celebrations in the Christian tradition. The wheel embodies the unending and unbroken circle of knowledge informed by Godliness, and the Baptist mission steering humanity along the path of knowledge.</string>
    <string name="thevalues">The core values of the University shall be Excellence, Godliness, Entrepreneurship, Innovation, and Social Responsibility.</string>
    <string name="prospect">Bowen University currently runs nine Faculties with three in the College of Health Sciences,namely:\n\ni.   Agriculture \nii.  Basic Clinical Sciences\niii. College of Health Science\niv. Clinical Sciences \nv.  Education\nvi. Humanities\nvii. Law\nviii. Sciences\nix. Social and Mangement Sciences \n     There is a long term plan to establish other Faculties including:  Engineering, Environmental Sciences and Pharmaceutical Sciences.</string>
    <string name="management">i. The Student Affairs Unit caters for the general welfare of students. It is overseen by the Dean of Student Affairs who is directly responsible to the Vice\-Chancellor. Students are therefore encouraged to relate closely with the Unit.\n\nii. The Chaplaincy under the direction of the University Chaplain has been established to cater for the spiritual life on campus. Students are encouraged to take advantage of this Unit for counselling and advice.</string>
    <string name="anthem">i. Great Alma Mater,\n   Bowen University \n  Excellence and Godliness\n  Is our esteemed watchword\n  Though tongues may differ\n  In brotherhood we stand in Christ\n  Hail, Alma Mater Dear\n\nii. Great Alma Mater\n    Bowen University \n   On Christ foundation built\n   That can not be shaken \n   Other may falter\n   Our conviction we hold so firm\n   Hail, Alma Mater Dear</string>
    <string name="introduction_drugabuse">Bowen University as a faith\-based University is founded on Godly doctrines, where morality complements academic performance in the award of degrees.\nDrug abuse is a problem that negatively affects its victims and has been implicated in a wide range of problems militating against the attainment of educational aims and objectives. Therefore, Bowen University places zero tolerance on any act of drug abuse.</string>
    <string name="definitions">The use of drugs that are not prescribed by a medical personnel after clinical assessment of the Health condition of a patient id Drug Abuse. However, a phenomenon whereby a person uses drugs (usually psychotropic drugs) that affect the mood and mental status of the user, sometimes giving a sense of euphoria and feeling high, is the social abuse known to most people.\nDrug Abuse, in this context, is the consumption of psychoactive , relaxing or performance enhancing drugs for non\-therapeutic or non\-medical effects.</string>
    <string name="formsofdrugabuse">The following Druga/substances are prohibited; therefore students must not possess, consume o distribute them within and outside the University Campus.\n  1. Alcohol\n  2. Morphine(MOP)\n  3. Marijuana/Weed(Igbo)\n  4. Methamphetamine(MET)\n  5. Opiates(OPI)\n  6. Benzodiazepines(BZO)\n  7. Barbiturates(BAR)\n  8. Amphetamines(AMP)\n  9. Phencyclidine(PCP)\n 10. Methadone(MTD)\n  11. Cigarette\n 12. Heroin\n 13. Cocaine\n 14. Any other drug not prescribed by a medical practitioner.\n 15. Items including rizzler, fire lighter, vapourizer, e\-cigarette, etc. are also prohibited.\n 16. Any natural product including plants, roots, bark of trees, etc.</string>
    <string name="addressinngdrugabuse">As part of its mission to the development of the society, Bowen University places utmost importance on preventing students from drug abuse and assisting those already involved in the act. In view of this, the following steps are employed to address the menace of drug abuse:\n\ni. Upon resumption, fresh students shall be subjected to dope test.\n\nii. All students and their language shall be subjected to a search by designated University officials before entering the halls of residence.\n\niii. Students who are already involved in drug abuse are encourage to seek assistance from the University Counsellors.\n\niv. Any student apprehended for possession, consumption or distribution of prohibited substances will be asked to leave the University campus and during this period and be required to undergo rehabilitation.\n\nv. Students are required to note that the University reserves the right to subject any student to a dope test at any time as part of its efforts to curb drug abuse.\n\nvi. Any student who refuses to present himself/herself timely upon invitation for a dope test shall be sanctioned.\n\nvii. A student shall bear the cost of the dope test if the result is found to be positive to prohibited substances. The cost shall be as determined by the University from time to time.\n\nviii. A student who is found to be positive to prohibited substances shall be required to undergo Drug Rehabilitation Therapy upon the student\’s voluntary submission and bearing all costs of the therapy at any health facility for such a period of time that the University may so prescribe.\n\nix. A student may be expelled from the University following the decision of the Student Disciplinary Committee if found to have abused any prohibited substance.</string>
    <string name="drugfreeclub">Drug Free Club (DFC) is a club established by the University in collaboration with the National Drug Law Enforcement Agency (NDLEA).\nAmongst other things, the club aims to:\n\ni.Educate students to abstain from drug abuse.\n\nii. Encourage students to abstain from drug abuse.\n\niii. Assist students who are already involved in drug abuse to come free of drugs.\nMembership shall be opened to students who desire to help promote a drug free society. The club shall operate under supervision of the Student Affairs Unit.</string>
</resources>