<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/header1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="INTRODUCTION"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduction_pre"
        android:layout_below="@id/header1"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
            <TextView
                android:id="@+id/header2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="HISTORICAL BACKGROUND OF THE UNIVERSITY"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:textStyle="bold"
                android:layout_below="@id/body1"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historicalbackground_pre"
                android:layout_below="@id/header2"
                android:textSize="18sp"
                android:fontFamily="@font/poppins_semibold"
                android:layout_marginTop="5dp"
                android:textIsSelectable="true"
                />
    <TextView
        android:id="@+id/header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="NAMING THE UNIVERSITY"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body2"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naming"
        android:layout_below="@id/header3"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="PHILOSOPHY"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body3"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/philosophy"
        android:layout_below="@id/header4"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="THE MOTTO"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_below="@id/body4"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/themotto"
        android:layout_below="@id/header5"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="THE LOGO"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body5"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logo"
        android:layout_below="@id/header6"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="VISION STATEMENT"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body6"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/visionstatemen"
        android:layout_below="@id/header7"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="MISSION STATEMENT"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body7"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/missionstatement"
        android:layout_below="@id/header8"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="VALUES"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body8"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thevalues"
        android:layout_below="@id/header9"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="PROSPECT FOR ACADEMIC DEVELOPMENT"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body9"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prospect"
        android:layout_below="@id/header10"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="STUDENT MANAGEMENT"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body10"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/management"
        android:layout_below="@id/header11"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />
    <TextView
        android:id="@+id/header12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:text="BOWEN UNIVERSITY ANTHEM"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:textStyle="bold"
        android:layout_below="@id/body11"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/body12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anthem"
        android:layout_below="@id/header12"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_semibold"
        android:layout_marginTop="5dp"
        android:textIsSelectable="true"
        />

</RelativeLayout>
</ScrollView>