<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fitsSystemWindows="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:id="@+id/header1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="INTRODUCTION"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introduction_drugabuse"
            android:layout_below="@id/header1"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="DEFINITION"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            android:layout_below="@id/body1"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/definitions"
            android:layout_below="@id/header2"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/header3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="FORMS OF DRUG THAT ARE COMMONLY ABUSED"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            android:layout_below="@id/body2"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/body3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/formsofdrugabuse"
            android:layout_below="@id/header3"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/header4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="MODES OF ADDRESSING DRUG ABUSE"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            android:layout_below="@id/body3"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/body4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressinngdrugabuse"
            android:layout_below="@id/header4"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            />
        <TextView
            android:id="@+id/header5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:text="DRUG FREE CLUB"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:textStyle="bold"
            android:layout_below="@id/body4"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/body5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drugfreeclub"
            android:layout_below="@id/header5"
            android:textSize="18sp"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="5dp"
            android:textIsSelectable="true"
            />


    </RelativeLayout>
</ScrollView>